# DonorIdeo

./: .gitignore  README.md  pyproject.toml
DonorIdeo/: config.py  create_subgraph.ipynb  eda.ipynb  json_utils.py  littlesis_graph_utils.py  nvd.py  total_donations_table.csv
assets/: graph_info.txt  graph_largest_info.txt  top_donors.csv  top_donors.tex
data/: database.csv  db.csv
data/minimum_nvd/: id-mapping-littlesis-to-mine.json  id-mapping-mine-to-littlesis.json
data/minimum_nvd/nvd/: 108697.csv  114182.csv  115420.csv  117153.csv  117188.csv  117193.csv  117206.csv  117214.csv  117216.csv  117217.csv  117231.csv  117241.csv  117352.csv  117579.csv  117824.csv  117839.csv  117949.csv  118054.csv  118114.csv  118177.csv  118483.csv  118484.csv  118489.csv  118491.csv  118493.csv  118595.csv  118607.csv  118646.csv  118669.csv  118766.csv  126308.csv  126495.csv  126508.csv  126686.csv  126708.csv  126709.csv  127720.csv  127794.csv  127931.csv  127936.csv  (+511 more)
scripts/: 2-littlesis-graph-exploration.ipynb  6-project-nvd-to-ideology.py  99-visualizations.ipynb  download-data.sh  initialize-database.py  minimum-nvd.jl  nvd.jl
