[tool.poetry]
name = "DonorIdeo"
version = "0.1.0"
description = "Estimate a ideology score of a politician based on the donations they receive"
authors = ["DueViktor <viktorduep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
pip = "^23.3.1"
install = "^1.3.5"
umap-learn = "^0.5.4"
plotly = "^5.18.0"
nbformat = "^5.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
